caching service for getting user type, added prototype dashboard